2003-02-20  Mike Kestner  <mkestner@speakeasy.net>

	* api/gtk-api.xml : hide the Arrow::Set method.
	* sources/Gtk.metadata : metadata for above.

2003-02-19  Mike Kestner  <mkestner@speakeasy.net>

	* generator/Parameters.cs (Initialize): construct a GLib.Value
	for out params.

2003-02-19  Mike Kestner  <mkestner@speakeasy.net>

	* api/gtk-api.xml : mark TreeModel::GetValue value param out
	suggested by Lee Mallabone <gnome@phonicmonkey.net>
	* sources/Gtk.metadata : metadata for above
	* sources/README : update the gnomedb/gda version reqs

2003-02-19  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata: Add GetLayoutOffsets to the rule for out params.

	* gtk/FileSelection.custom (Button): Rename to FSButton, so that
	we won't wipe out our original Gtk.Button docs.

2003-02-19  Mike Kestner  <mkestner@speakeasy.net>

	* generator/GenBase.cs : mark #line 1 for .customs
	* generator/SignalHandler.cs : fix for GObj retvals

2003-02-18  Mark Crichton  <crichton@gimp.org>

	* generator/EnumGen.cs: Handle different enum types.

2003-02-14  Duncan Mak  <duncan@ximian.com>

	* api/gtk-api.xml:
	* sources/Gtk.metadata: Mark 'out' param in GetSelectionBounds,
	thanks to Lee Mallabone for spotting that.

2003-02-13  Mike Kestner  <mkestner@speakeasy.net>

	* glib/Boxed.cs : fix a ctor bug reported to the list by 
	u900842@oz.nthu.edu.tw.

2003-02-13  Mike Kestner  <mkestner@speakeasy.net>

	* sample/Makefile.in: add a distclean target

2003-02-13  Charles Iliya Krempeaux  <charles@reptile.ca>

	* README : Clarifications and additions

2003-02-13  Stefan Sarin <gprojects@saring.de>

	* gdk/Color.custom: fixed ToString ().

2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gconf/GConf/Client.cs:
	* gconf/GConf/NoSuchKeyException.cs: added key string to the exception
	when Get does not find it.

2003-02-11  Duncan Mak  <duncan@ximian.com>

	* gnome/voidObjectAffineSVPintSignal.cs:
	* gnome/CanvasProxy.cs: Make the voidObjectAffineSVPintSignal