@@ -787,37 +787,6 @@
           <parameter type="gint" name="end_offset"/>
         </parameters>
       </method>
-      <method name="AttributeForName" cname="atk_text_attribute_for_name" shared="true">
-        <return-type type="AtkTextAttribute"/>
-        <parameters>
-          <parameter type="const-gchar*" name="name"/>
-        </parameters>
-      </method>
-      <method name="AttributeGetName" cname="atk_text_attribute_get_name" shared="true">
-        <return-type type="const-gchar*"/>
-        <parameters>
-          <parameter type="AtkTextAttribute" name="attr"/>
-        </parameters>
-      </method>
-      <method name="AttributeGetType" cname="atk_text_attribute_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
-      <method name="AttributeGetValue" cname="atk_text_attribute_get_value" shared="true">
-        <return-type type="const-gchar*"/>
-        <parameters>
-          <parameter type="AtkTextAttribute" name="attr"/>
-          <parameter type="gint" name="index"/>
-        </parameters>
-      </method>
-      <method name="AttributeRegister" cname="atk_text_attribute_register" shared="true">
-        <return-type type="AtkTextAttribute"/>
-        <parameters>
-          <parameter type="const-gchar*" name="name"/>
-        </parameters>
-      </method>
-      <method name="BoundaryGetType" cname="atk_text_boundary_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="GetCaretOffset" cname="atk_text_get_caret_offset">
         <return-type type="gint"/>
       </method>
@@ -1237,27 +1206,6 @@
           <parameter type="AtkRelationType" name="relationship"/>
         </parameters>
       </constructor>
-      <method name="TypeForName" cname="atk_relation_type_for_name" shared="true">
-        <return-type type="AtkRelationType"/>
-        <parameters>
-          <parameter type="const-gchar*" name="name"/>
-        </parameters>
-      </method>
-      <method name="TypeGetName" cname="atk_relation_type_get_name" shared="true">
-        <return-type type="const-gchar*"/>
-        <parameters>
-          <parameter type="AtkRelationType" name="type"/>
-        </parameters>
-      </method>
-      <method name="TypeGetType" cname="atk_relation_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
-      <method name="TypeRegister" cname="atk_relation_type_register" shared="true">
-        <return-type type="AtkRelationType"/>
-        <parameters>
-          <parameter type="const-gchar*" name="name"/>
-        </parameters>
-      </method>
     </object>
     <object name="RelationSet" cname="AtkRelationSet" parent="GObject">
       <field cname="relations" type="GPtrArray*"/>
