@@ -1120,9 +1120,6 @@
           <parameter type="GdkColormap*" name="colormap"/>
         </parameters>
       </method>
-      <method name="TypeGetType" cname="gdk_image_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="Keymap" cname="GdkKeymap" parent="GObject">
       <signal name="DirectionChanged" cname="direction_changed" when="LAST">
@@ -1300,9 +1297,6 @@
       <method name="GetType" cname="gdk_visual_get_type" shared="true">
         <return-type type="GType"/>
       </method>
-      <method name="TypeGetType" cname="gdk_visual_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="Window" cname="GdkWindow" parent="GdkDrawable">
       <method name="AddFilter" cname="gdk_window_add_filter">
@@ -1318,9 +1312,6 @@
           <parameter type="gint*" name="win_x"/>
           <parameter type="gint*" name="win_y"/>
         </parameters>
-      </method>
-      <method name="AttributesTypeGetType" cname="gdk_window_attributes_type_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="BeginMoveDrag" cname="gdk_window_begin_move_drag">
         <return-type type="void"/>
@@ -1352,9 +1343,6 @@
           <parameter type="gint" name="root_y"/>
           <parameter type="guint32" name="timestamp"/>
         </parameters>
-      </method>
-      <method name="ClassGetType" cname="gdk_window_class_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Clear" cname="gdk_window_clear">
         <return-type type="void"/>
@@ -1393,9 +1381,6 @@
       </method>
       <method name="Destroy" cname="gdk_window_destroy">
         <return-type type="void"/>
-      </method>
-      <method name="EdgeGetType" cname="gdk_window_edge_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="EndPaint" cname="gdk_window_end_paint">
         <return-type type="void"/>
@@ -1506,9 +1491,6 @@
       </method>
       <method name="Hide" cname="gdk_window_hide">
         <return-type type="void"/>
-      </method>
-      <method name="HintsGetType" cname="gdk_window_hints_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Iconify" cname="gdk_window_iconify">
         <return-type type="void"/>
@@ -1781,20 +1763,11 @@
       <method name="ShowUnraised" cname="gdk_window_show_unraised">
         <return-type type="void"/>
       </method>
-      <method name="StateGetType" cname="gdk_window_state_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="Stick" cname="gdk_window_stick">
         <return-type type="void"/>
       </method>
       <method name="ThawUpdates" cname="gdk_window_thaw_updates">
         <return-type type="void"/>
-      </method>
-      <method name="TypeGetType" cname="gdk_window_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
-      <method name="TypeHintGetType" cname="gdk_window_type_hint_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Unmaximize" cname="gdk_window_unmaximize">
         <return-type type="void"/>
@@ -1885,9 +1858,6 @@
       </constructor>
       <method name="Ref" cname="gdk_cursor_ref">
         <return-type type="GdkCursor*"/>
-      </method>
-      <method name="TypeGetType" cname="gdk_cursor_type_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Unref" cname="gdk_cursor_unref">
         <return-type type="void"/>
@@ -2089,9 +2059,6 @@
       <field cname="line_style" type="GdkLineStyle"/>
       <field cname="cap_style" type="GdkCapStyle"/>
       <field cname="join_style" type="GdkJoinStyle"/>
-      <method name="MaskGetType" cname="gdk_gc_values_mask_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </struct>
     <struct name="Geometry" cname="GdkGeometry">
       <field cname="min_width" type="gint"/>
@@ -2426,9 +2393,6 @@
           <parameter type="guchar" name="b"/>
         </parameters>
       </method>
-      <method name="AlphaModeGetType" cname="gdk_pixbuf_alpha_mode_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="Composite" cname="gdk_pixbuf_composite">
         <return-type type="void"/>
         <parameters>
@@ -2492,12 +2456,6 @@
           <parameter type="int" name="dest_x"/>
           <parameter type="int" name="dest_y"/>
         </parameters>
-      </method>
-      <method name="ErrorGetType" cname="gdk_pixbuf_error_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
-      <method name="ErrorQuark" cname="gdk_pixbuf_error_quark" shared="true">
-        <return-type type="GQuark"/>
       </method>
       <method name="Fill" cname="gdk_pixbuf_fill">
         <return-type type="void"/>
