@@ -200,9 +200,6 @@
       <field cname="type" type="GnomeTriggerType"/>
       <field cname="function" type="GnomeTriggerActionFunction"/>
       <field cname="level" type="gchar*"/>
-      <method name="TypeGetType" cname="gnome_trigger_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </struct>
     <struct name="TriggerList" cname="GnomeTriggerList">
       <field cname="nodename" type="char*"/>
@@ -1862,9 +1859,6 @@
       <method name="Disconnect" cname="gnome_client_disconnect">
         <return-type type="void"/>
       </method>
-      <method name="FlagsGetType" cname="gnome_client_flags_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="Flush" cname="gnome_client_flush">
         <return-type type="void"/>
       </method>
@@ -2026,9 +2020,6 @@
           <parameter type="const-gchar*" name="id"/>
         </parameters>
       </method>
-      <method name="StateGetType" cname="gnome_client_state_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="ColorPicker" cname="GnomeColorPicker" parent="GtkButton">
       <field cname="_priv" type="GnomeColorPickerPrivate*"/>
@@ -2160,9 +2151,6 @@
           <parameter type="time_t" name="the_time"/>
           <parameter type="GnomeDateEditFlags" name="flags"/>
         </parameters>
-      </method>
-      <method name="FlagsGetType" cname="gnome_date_edit_flags_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="GetFlags" cname="gnome_date_edit_get_flags">
         <return-type type="int"/>
@@ -2752,9 +2740,6 @@
       <method name="GetType" cname="gnome_font_picker_get_type" shared="true">
         <return-type type="GType"/>
       </method>
-      <method name="ModeGetType" cname="gnome_font_picker_mode_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <constructor cname="gnome_font_picker_new"/>
       <method name="SetFontName" cname="gnome_font_picker_set_font_name">
         <return-type type="gboolean"/>
@@ -3074,9 +3059,6 @@
           <parameter type="const-char*" name="icon_filename"/>
           <parameter type="const-char*" name="text"/>
         </parameters>
-      </method>
-      <method name="ModeGetType" cname="gnome_icon_list_mode_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Moveto" cname="gnome_icon_list_moveto">
         <return-type type="void"/>
@@ -3492,12 +3474,6 @@
       <field cname="accelerator_key" type="guint"/>
       <field cname="ac_mods" type="GdkModifierType"/>
       <field cname="widget" type="GtkWidget*"/>
-      <method name="ConfigurableTypesGetType" cname="gnome_ui_info_configurable_types_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
-      <method name="TypeGetType" cname="gnome_ui_info_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </struct>
     <object name="Stock" cname="GnomeStock">
       <static-string cname="GNOME_STOCK_ABOUT" name="About" value="gnome-stock-about"/>
