@@ -997,9 +997,6 @@
           <parameter type="gint*" name="new_order"/>
         </parameters>
       </signal>
-      <method name="FlagsGetType" cname="gtk_tree_model_flags_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="Foreach" cname="gtk_tree_model_foreach">
         <return-type type="void"/>
         <parameters>
@@ -1450,9 +1447,6 @@
           <parameter type="GtkShadowType" name="shadow_type"/>
         </parameters>
       </method>
-      <method name="TypeGetType" cname="gtk_arrow_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="AspectFrame" cname="GtkAspectFrame" parent="GtkFrame">
       <field cname="xalign" type="gfloat"/>
@@ -1732,9 +1726,6 @@
           <parameter type="GtkButtonBoxStyle" name="layout_style"/>
         </parameters>
       </method>
-      <method name="StyleGetType" cname="gtk_button_box_style_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="Calendar" cname="GtkCalendar" parent="GtkWidget">
       <field cname="header_style" type="GtkStyle*"/>
@@ -1830,9 +1821,6 @@
         <parameters>
           <parameter type="GtkCalendarDisplayOptions" name="flags"/>
         </parameters>
-      </method>
-      <method name="DisplayOptionsGetType" cname="gtk_calendar_display_options_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Freeze" cname="gtk_calendar_freeze">
         <return-type type="void"/>
@@ -1931,9 +1919,6 @@
       <method name="GetType" cname="gtk_cell_renderer_get_type" shared="true">
         <return-type type="GType"/>
       </method>
-      <method name="ModeGetType" cname="gtk_cell_renderer_mode_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="Render" cname="gtk_cell_renderer_render">
         <return-type type="void"/>
         <parameters>
@@ -1962,9 +1947,6 @@
           <parameter type="GdkRectangle*" name="cell_area"/>
           <parameter type="GtkCellRendererState" name="flags"/>
         </parameters>
-      </method>
-      <method name="StateGetType" cname="gtk_cell_renderer_state_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
     </object>
     <object name="CellRendererPixbuf" cname="GtkCellRendererPixbuf" parent="GtkCellRenderer">
@@ -2616,9 +2598,6 @@
           <parameter type="gfloat" array="true" name="vector"/>
         </parameters>
       </method>
-      <method name="TypeGetType" cname="gtk_curve_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="Dialog" cname="GtkDialog" parent="GtkWindow">
       <field cname="vbox" type="GtkWidget*"/>
@@ -2658,9 +2637,6 @@
           <parameter type="const-gchar*" name="first_button_text"/>
           <parameter ellipsis="true"/>
         </parameters>
-      </method>
-      <method name="FlagsGetType" cname="gtk_dialog_flags_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="GetHasSeparator" cname="gtk_dialog_get_has_separator">
         <return-type type="gboolean"/>
@@ -3532,9 +3508,6 @@
           <parameter type="GtkIconSize" name="size"/>
         </parameters>
       </method>
-      <method name="TypeGetType" cname="gtk_image_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="ImageMenuItem" cname="GtkImageMenuItem" parent="GtkMenuItem">
       <field cname="image" type="GtkWidget*"/>
@@ -4346,9 +4319,6 @@
       <method name="Detach" cname="gtk_menu_detach">
         <return-type type="void"/>
       </method>
-      <method name="DirectionTypeGetType" cname="gtk_menu_direction_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="GetAccelGroup" cname="gtk_menu_get_accel_group">
         <return-type type="GtkAccelGroup*"/>
       </method>
@@ -4948,9 +4918,6 @@
           <parameter type="GtkPositionType" name="pos"/>
         </parameters>
       </method>
-      <method name="TabGetType" cname="gtk_notebook_tab_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="Object" cname="GtkObject" parent="GObject">
       <field cname="flags" type="guint32"/>
@@ -4963,9 +4930,6 @@
       </signal>
       <method name="Destroy" cname="gtk_object_destroy">
         <return-type type="void"/>
-      </method>
-      <method name="FlagsGetType" cname="gtk_object_flags_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="GetType" cname="gtk_object_get_type" shared="true">
         <return-type type="GtkType"/>
@@ -5216,9 +5180,6 @@
         <return-type type="GtkType"/>
       </method>
       <constructor cname="gtk_progress_bar_new"/>
-      <method name="OrientationGetType" cname="gtk_progress_bar_orientation_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="Pulse" cname="gtk_progress_bar_pulse">
         <return-type type="void"/>
       </method>
@@ -5245,9 +5206,6 @@
         <parameters>
           <parameter type="const-gchar*" name="text"/>
         </parameters>
-      </method>
-      <method name="StyleGetType" cname="gtk_progress_bar_style_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
     </object>
     <object name="RadioButton" cname="GtkRadioButton" parent="GtkCheckButton">
@@ -5746,9 +5704,6 @@
       <method name="GetType" cname="gtk_size_group_get_type" shared="true">
         <return-type type="GType"/>
       </method>
-      <method name="ModeGetType" cname="gtk_size_group_mode_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <constructor cname="gtk_size_group_new">
         <parameters>
           <parameter type="GtkSizeGroupMode" name="mode"/>
@@ -5989,9 +5944,6 @@
       </method>
       <method name="Update" cname="gtk_spin_button_update">
         <return-type type="void"/>
-      </method>
-      <method name="UpdatePolicyGetType" cname="gtk_spin_button_update_policy_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
     </object>
     <object name="Statusbar" cname="GtkStatusbar" parent="GtkHBox">
@@ -7639,12 +7591,6 @@
           <parameter type="gboolean" name="enable"/>
         </parameters>
       </method>
-      <method name="SpaceStyleGetType" cname="gtk_toolbar_space_style_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
-      <method name="StyleGetType" cname="gtk_toolbar_style_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="UnsetIconSize" cname="gtk_toolbar_unset_icon_size">
         <return-type type="void"/>
       </method>
@@ -8126,9 +8072,6 @@
         <parameters>
           <parameter type="GtkTreePath*" name="path"/>
         </parameters>
-      </method>
-      <method name="DropPositionGetType" cname="gtk_tree_view_drop_position_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="EnableModelDragDest" cname="gtk_tree_view_enable_model_drag_dest">
         <return-type type="void"/>
@@ -8749,9 +8692,6 @@
         <parameters>
           <parameter type="GtkWidget*" name="widget"/>
         </parameters>
-      </method>
-      <method name="SizingGetType" cname="gtk_tree_view_column_sizing_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
     </object>
     <object name="VBox" cname="GtkVBox" parent="GtkBox">
@@ -9398,9 +9338,6 @@
           <parameter type="GdkEvent*" name="event"/>
         </parameters>
       </method>
-      <method name="FlagsGetType" cname="gtk_widget_flags_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="FreezeChildNotify" cname="gtk_widget_freeze_child_notify">
         <return-type type="void"/>
       </method>
@@ -9498,9 +9435,6 @@
       </method>
       <method name="GrabFocus" cname="gtk_widget_grab_focus">
         <return-type type="void"/>
-      </method>
-      <method name="HelpTypeGetType" cname="gtk_widget_help_type_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Hide" cname="gtk_widget_hide">
         <return-type type="void"/>
@@ -10115,9 +10049,6 @@
           <parameter type="const-gchar*" name="geometry"/>
         </parameters>
       </method>
-      <method name="PositionGetType" cname="gtk_window_position_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
       <method name="Present" cname="gtk_window_present">
         <return-type type="void"/>
       </method>
@@ -10285,9 +10216,6 @@
       </method>
       <method name="Stick" cname="gtk_window_stick">
         <return-type type="void"/>
-      </method>
-      <method name="TypeGetType" cname="gtk_window_type_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Unmaximize" cname="gtk_window_unmaximize">
         <return-type type="void"/>
@@ -11411,19 +11339,12 @@
       <field cname="info" type="GtkTextTagInfo*"/>
       <field cname="inNodeCounts" type="gboolean"/>
     </struct>
-    <struct name="TextWindow" cname="GtkTextWindow" opaque="true">
-      <method name="TypeGetType" cname="gtk_text_window_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
-    </struct>
+    <struct name="TextWindow" cname="GtkTextWindow" opaque="true"/>
     <struct name="ToolbarChild" cname="GtkToolbarChild">
       <field cname="type" type="GtkToolbarChildType"/>
       <field cname="widget" type="GtkWidget*"/>
       <field cname="icon" type="GtkWidget*"/>
       <field cname="label" type="GtkWidget*"/>
-      <method name="TypeGetType" cname="gtk_toolbar_child_type_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </struct>
     <struct name="TooltipsData" cname="GtkTooltipsData">
       <field cname="tooltips" type="GtkTooltips*"/>
