@@ -217,9 +217,6 @@
       <method name="GetType" cname="pango_font_get_type" shared="true">
         <return-type type="GType"/>
       </method>
-      <method name="MaskGetType" cname="pango_font_mask_get_type" shared="true">
-        <return-type type="GType"/>
-      </method>
     </object>
     <object name="Fontset" cname="PangoFontset" parent="GObject">
       <method name="GetFont" cname="pango_fontset_get_font">
@@ -727,9 +724,6 @@
         <parameters>
           <parameter type="int" name="index"/>
         </parameters>
-      </method>
-      <method name="LevelGetType" cname="pango_coverage_level_get_type" shared="true">
-        <return-type type="GType"/>
       </method>
       <method name="Max" cname="pango_coverage_max">
         <return-type type="void"/>
