@@ -1,3 +1,8 @@
+2003-02-21  Mike Kestner  <mkestner@speakeasy.net>
+
+	* api/*-api.xml : remove stray enum get_type methods.
+	* parser/gapi2xml.pl : ignore get_type methods on enums.
+
 2003-02-20  Mike Kestner  <mkestner@speakeasy.net>
 
 	* api/gtk-api.xml : hide the Arrow::Set method.
